Fix text visibility issue with the Expand/Collapse All button in Course View

--- a/comprehensive/lms/static/sass/partials/lms/theme/_extras.scss
+++ b/comprehensive/lms/static/sass/partials/lms/theme/_extras.scss
@@ -110,6 +110,11 @@ a.register-btn {
     background-color: $ms-primary-button-hover !important;
 }
 
+// Expand All/Collapse All button in course view
+#expand-collapse-outline-all-button:hover {
+    color: #FFFFFF !important;
+}
+
 //------------------
 // Registration Page
 //------------------
